RESOLVED FIXED 261776
[WebGPU] Wrong default values for bytesPerRow and rowsPerImage in QueueImpl::writeTexture
https://bugs.webkit.org/show_bug.cgi?id=261776
Summary [WebGPU] Wrong default values for bytesPerRow and rowsPerImage in QueueImpl::...
Mike Wyrzykowski
Reported 2023-09-19 14:29:00 PDT
[WebGPU] Wrong default values for bytesPerRow and rowsPerImage in QueueImpl::writeTexture
Attachments
Mike Wyrzykowski
Comment 1 2023-09-19 14:29:31 PDT
Mike Wyrzykowski
Comment 2 2023-09-19 15:10:25 PDT
EWS
Comment 3 2023-09-19 23:04:21 PDT
Committed 268181@main (91c2da047ad0): <https://commits.webkit.org/268181@main> Reviewed commits have been landed. Closing PR #17939 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.