[WebGPU] Wrong default values for bytesPerRow and rowsPerImage in QueueImpl::writeTexture https://bugs.webkit.org/show_bug.cgi?id=261776 <radar://115746284>

Reviewed by Dan Glastonbury.

0 and 1 are incorrect here, we should use the default of WGPU_COPY_STRIDE_UNDEFINED
instead.

* Source/WebCore/Modules/WebGPU/Implementation/WebGPUQueueImpl.cpp:
(WebCore::WebGPU::QueueImpl::writeTexture):

* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::writeTexture):
Fall back to defaults when undefined constant is passed.

Canonical link: https://commits.webkit.org/268181@main